--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@eslint/js": "^9.12.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0",
     "prettier": "^3.3.3",
